parte do perfil principal

--- a/portfolio/src/app/components/main-profile/main-profile.component.html
+++ b/portfolio/src/app/components/main-profile/main-profile.component.html
@@ -1,16 +1,91 @@
 <div class="containerProfile">
-  <div class="d-flex justify-content-center">
-    <div class="containerPictureProfile">
-      <img
-        src="../../../assets/7ppvb8uyrjj61.jpg"
-        alt="profile image"
-        class="pictureProfile"
-      />
-    </div>
-  </div>
+  <div></div>
   <div class="pictureProfileInfo">
-    <div class="mt-5">
-      <h1></h1>
+    <div class="row d-flex align-items-center flex-column">
+      <div class="containerPictureProfile">
+        <img
+          src="../../../assets/7ppvb8uyrjj61.jpg"
+          alt="profile image"
+          class="pictureProfile"
+        />
+      </div>
+      <h2 class="fw-semibold col-12 text-center">Mateus Suzuki</h2>
+      <p class="backgroundGray fw-semibold col-9 text-center">
+        Desenvolvedor FullStack
+      </p>
+      <div class="col-12">
+        <div class="row justify-content-center">
+          <button class="btn col-2 backgroundGray mx-1">
+            <img
+              src="../../../assets/svgs/ig.svg"
+              class="socialIcon"
+              alt="social media"
+            />
+          </button>
+          <button class="btn col-2 backgroundGray mx-1">
+            <img
+              src="../../../assets/svgs/git.svg"
+              class="socialIcon"
+              alt="social media"
+            />
+          </button>
+          <button class="btn col-2 backgroundGray mx-1">
+            <img
+              src="../../../assets/svgs/linkedin.svg"
+              class="socialIcon"
+              alt="social media"
+            />
+          </button>
+        </div>
+      </div>
+
+      <div class="backgroundGray mt-3" style="width: 300px">
+        <div class="p-2 px-3">
+          <div class="row">
+            <div class="col-12">
+              <label class="form-label d-flex align-items-center">
+                <img
+                  src="../../../assets/svgs/smartphone.svg"
+                  alt=""
+                  class="iconContact"
+                />
+                Telefone
+              </label>
+            </div>
+            <span class="col-12 fw-semibold">+55 17 988263169</span>
+          </div>
+
+          <div class="row line">
+            <div class="col-12">
+              <label class="form-label d-flex align-items-center">
+                <img
+                  src="../../../assets/svgs/email.svg"
+                  alt=""
+                  class="iconContact"
+                />
+                Email
+              </label>
+            </div>
+            <span class="col-12 fw-semibold">mateussuzuki2022&#64;hotmail.com</span>
+          </div>
+
+          <div class="row line">
+            <div class="col-12">
+              <label class="form-label d-flex align-items-center">
+                <img
+                  src="../../../assets/svgs/localizacao.svg"
+                  alt=""
+                  class="iconContact"
+                />
+                Localização
+              </label>
+            </div>
+            <span class="col-12 fw-semibold">São José do Rio Preto - SP </span>
+          </div>
+
+        </div>
+      </div>
+
     </div>
   </div>
 </div>
