--- a/portfolio/src/app/app.component.html
+++ b/portfolio/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="row">
-    <div class="col-3">
+    <div class="col-12 col-lg-3">
       <app-main-profile/>
     </div>
-    <div class="col-8">
+    <div class="col-12 col-lg-9">
     </div>
   </div>
 </div>
