--- a/portfolio/src/app/components/main-profile/main-profile.component.scss
+++ b/portfolio/src/app/components/main-profile/main-profile.component.scss
@@ -1,16 +1,16 @@
+
 .containerProfile {
   height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  position: relative;
 }
 
 .containerPictureProfile {
-  width: 160px;
+  width: 180px;
   height: 160px;
-  position: absolute;
+  margin-top: -90px;
 }
 
 .pictureProfile {
@@ -22,7 +22,34 @@
 
 .pictureProfileInfo {
   height: 80vh;
-  width: 100%;
+  width: 320px;
   border-radius: 5px;
-  background-color: rgba(238, 0, 0, 0.274);
+  background-color: #FFFBF5;
+  display: flex;
+  justify-content: center;
+}
+
+.backgroundGray {
+  background-color: rgba(82, 92, 119, 0.226);
+  padding: 5px;
+  border-radius: 10px;
+}
+
+.socialIcon {
+  width: 28px;
+}
+
+.iconContact {
+  width: 30px;
+  background-color: #FFFBF5;
+  padding: 5px;
+  margin-right: 6px;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+}
+
+.line {
+  padding-top: 12px;
+  margin-top: 8px;
+  border-top: 2px solid rgba(77, 65, 65, 0.103);
 }
