diminuindo tamanho profile e adicionando o profile info

--- a/portfolio/src/app/components/main-profile/main-profile.component.html
+++ b/portfolio/src/app/components/main-profile/main-profile.component.html
@@ -1,5 +1,4 @@
 <div class="containerProfile">
-  <div></div>
   <div class="pictureProfileInfo">
     <div class="row d-flex align-items-center flex-column">
       <div class="containerPictureProfile">
@@ -9,7 +8,7 @@
           class="pictureProfile"
         />
       </div>
-      <h2 class="fw-semibold col-12 text-center">Mateus Suzuki</h2>
+      <h2 class="fw-semibold col-12 text-center mt-2">Mateus Suzuki</h2>
       <p class="backgroundGray fw-semibold col-9 text-center">
         Desenvolvedor FullStack
       </p>
@@ -66,7 +65,9 @@
                 Email
               </label>
             </div>
-            <span class="col-12 fw-semibold">mateussuzuki2022&#64;hotmail.com</span>
+            <span class="col-12 fw-semibold"
+              >mateussuzuki2022&#64;hotmail.com</span
+            >
           </div>
 
           <div class="row line">
@@ -82,10 +83,14 @@
             </div>
             <span class="col-12 fw-semibold">São José do Rio Preto - SP </span>
           </div>
-
         </div>
       </div>
-
+      <button class="btn btnCV mt-3 fw-semibold">
+        <span>
+          <img src="../../../assets/svgs/download.svg" alt="" class="iconCV" />
+        </span>
+        Download Cv
+      </button>
     </div>
   </div>
 </div>
