--- a/portfolio/src/app/components/info-tab/info-tab.component.html
+++ b/portfolio/src/app/components/info-tab/info-tab.component.html
@@ -1,7 +1,6 @@
 <div class="container d-flex">
   <div class="containerInfo">
-    <div></div>
-    <div class="tabContent ms-3">
+    <div class="tabContent ">
       <div class="tab-content" id="v-pills-tabContent">
         <div
           class="tab-pane fade show active"
@@ -12,7 +11,32 @@
         >
           <h1>Sobre</h1>
           <p>Olá, me chamo Mateus Suzuki e estudo programação a um ano e meio, já realizei alguns projetos pequenos, mas recentemente estou aplicando todo meu aprendizado em projetos maiores e com mais funções.</p>
-          <p>Aqui estão algumas das tecnologias que eu tenho um certo conhecimento: </p>
+          <h3>Tecnologias:</h3>
+          <div class="row">
+            <div class="col-6">
+              <div class="row">
+                <div class="col-2">
+                  <img src="../../../assets/svgs/angular.svg" alt="" class="iconTecno">
+                </div>
+                <div class="col-10">
+                  <h2>Angular</h2>
+                </div>
+              </div>
+            </div>
+            <div class="col-6">
+              <div class="row">
+                <div class="col-2">
+                  <img src="../../../assets/svgs/js.svg" alt="" class="iconTecno">
+                </div>
+                <div class="col-10">
+                  <h2>JavaScript</h2>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div>
+            
+          </div>
         </div>
         <div
           class="tab-pane fade"
