adicionando typescript e mudando padding

--- a/portfolio/src/app/components/info-tab/info-tab.component.html
+++ b/portfolio/src/app/components/info-tab/info-tab.component.html
@@ -44,7 +44,7 @@
             todo meu aprendizado em projetos maiores e com mais funções.
           </p>
           <h3>Tecnologias:</h3>
-          <app-tec class="row" />
+          <app-tec class="row justify-content-center" />
         </div>
         <div
           class="tab-pane fade"
