--- a/portfolio/src/app/components/tec/tec.component.scss
+++ b/portfolio/src/app/components/tec/tec.component.scss
@@ -1,3 +1,9 @@
 .iconTecno {
   width: 50px;
 }
+
+.back {
+  background-color: rgba(117, 88, 180, 0.342);
+  padding: 16px;
+  border-radius: 10px;
+}
