--- a/portfolio/src/app/components/tec/tec.component.html
+++ b/portfolio/src/app/components/tec/tec.component.html
@@ -1,9 +1,9 @@
-<div class="col-6" *ngFor="let tecno of tecnos.tecnos">
+<div class="col-5 my-2 mx-3 back" *ngFor="let tecno of tecnos.tecnos">
   <div class="row">
-    <div class="col-2">
+    <div class="col-12 col-md-3">
       <img src="{{ tecno.img }}" alt="" class="iconTecno" />
     </div>
-    <div class="col-10">
+    <div class="col-12 col-md-9">
       <h2>{{ tecno.title }}</h2>
     </div>
   </div>
