--- a/portfolio/src/app/components/info-tab/info-tab.component.scss
+++ b/portfolio/src/app/components/info-tab/info-tab.component.scss
@@ -34,6 +34,12 @@
   padding: 50px;
 }
 
+hr {
+  box-sizing:border-box;
+  width: 50%;  
+  border: 1px solid #48116d;
+}
+
 @media(max-width: 992px) {
   .tabContent {
     margin: auto;
