--- a/portfolio/src/app/components/main-profile/main-profile.component.scss
+++ b/portfolio/src/app/components/main-profile/main-profile.component.scss
@@ -61,6 +61,7 @@
 .btnCV {
   background: linear-gradient(90deg, rgba(131,58,180,1) 42%, rgba(117,88,180,1) 93%);
   width: 180px;
+  color: white;
 }
 
 .iconCV {
