adicionando sticky no perfil, tamanho dos containers

--- a/portfolio/src/app/components/info-tab/info-tab.component.html
+++ b/portfolio/src/app/components/info-tab/info-tab.component.html
@@ -1,6 +1,6 @@
 <div class="container d-flex justify-content-center">
   <div class="containerInfo">
-    <div class="d-flex align-items-center backgroundGray">
+    <div class="d-flex align-items-center my-3">
       <div class="nav nav-pills" id="v-pills-tab" role="tablist">
         <button
           class="nav-link"
@@ -43,7 +43,7 @@
           <p>
             Olá, me chamo Mateus Suzuki e estudo programação a um ano e meio, já
             realizei alguns projetos pequenos, mas recentemente estou aplicando
-            todo meu aprendizado em projetos maiores e com mais funções.
+            todo meu aprendizado em projetos maiores e com mais funções. Todos os meus projetos são pessoais.
           </p>
           <h4>Tecnologias</h4>
           <app-tec class="row justify-content-center" />
@@ -59,7 +59,7 @@
             <h1>Projetos</h1>
             <hr>
           </div>
-          <app-projects/>
+          <app-projects class="row justify-content-center"/>
         </div>
       </div>
     </div>
