--- a/portfolio/src/app/components/main-profile/main-profile.component.html
+++ b/portfolio/src/app/components/main-profile/main-profile.component.html
@@ -1,6 +1,6 @@
 <div class="containerProfile">
   <div class="pictureProfileInfo">
-    <div class="row d-flex align-items-center flex-column">
+    <div class="row d-flex align-items-center flex-column sticky">
       <div class="containerPictureProfile">
         <img
           src="../../../assets/7ppvb8uyrjj61.jpg"
@@ -85,7 +85,7 @@
           </div>
         </div>
       </div>
-      <button class="btn btnCV mt-3 fw-semibold">
+      <button class="btn btnCV my-3 fw-semibold">
         <span>
           <img src="../../../assets/svgs/download.svg" alt="" class="iconCV" />
         </span>
