--- a/portfolio/src/app/components/projects/projects.component.scss
+++ b/portfolio/src/app/components/projects/projects.component.scss
@@ -1,10 +1,17 @@
 .img {
-  width: 100%;
+  width: 278px;
   border-radius: 15px;
   padding: 10px;
 }
 
-.back {
+.backPurple {
   background-color: rgba(117, 88, 180, 0.342);
+  padding: 16px;
+  border-radius: 10px;
+}
+
+.backBlue {
+  background-color: rgba(80, 95, 175, 0.26);
+  padding: 16px;
   border-radius: 10px;
 }
