--- a/portfolio/src/app/components/tec/tec.component.scss
+++ b/portfolio/src/app/components/tec/tec.component.scss
@@ -2,8 +2,14 @@
   width: 50px;
 }
 
-.back {
+.backPurple {
   background-color: rgba(117, 88, 180, 0.342);
+  padding: 16px;
+  border-radius: 10px;
+}
+
+.backBlue {
+  background-color: rgba(80, 95, 175, 0.26);
   padding: 16px;
   border-radius: 10px;
 }
