--- a/portfolio/src/app/components/main-profile/main-profile.component.scss
+++ b/portfolio/src/app/components/main-profile/main-profile.component.scss
@@ -1,10 +1,10 @@
 
 .containerProfile {
-  height: 100vh;
+  min-height: 110vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center; 
 }
 
 .containerPictureProfile {
@@ -21,12 +21,15 @@
 }
 
 .pictureProfileInfo {
-  height: 69vh;
   width: 360px;
   border-radius: 5px;
   background-color: #FFFBF5;
   display: flex;
   justify-content: center;
+
+  position: -webkit-sticky;
+  position: sticky;
+  top: 200px;
 }
 
 .backgroundGray {
