--- a/portfolio/src/app/components/projects/projects.component.scss
+++ b/portfolio/src/app/components/projects/projects.component.scss
@@ -1,7 +1,12 @@
 .img {
-  width: 278px;
+  width: 270px;
+  height: 200px;
   border-radius: 15px;
   padding: 10px;
+}
+
+.back {
+  height: 380px;
 }
 
 .backPurple {
