--- a/portfolio/src/app/components/info-tab/info-tab.component.html
+++ b/portfolio/src/app/components/info-tab/info-tab.component.html
@@ -1,6 +1,6 @@
 <div class="container d-flex justify-content-center">
   <div class="containerInfo">
-    <div class="d-flex align-items-center my-3">
+    <div class="d-flex align-items-center">
       <div class="nav nav-pills" id="v-pills-tab" role="tablist">
         <button
           class="nav-link"
@@ -43,8 +43,9 @@
           <p>
             Olá, me chamo Mateus Suzuki e estudo programação a um ano e meio, já
             realizei alguns projetos pequenos, mas recentemente estou aplicando
-            todo meu aprendizado em projetos maiores e com mais funções. Todos os meus projetos são pessoais.
+            todo meu aprendizado em projetos maiores e com mais funções.
           </p>
+          <p>Aqui estão algumas tecnologias que eu tenho conhecimento:</p>
           <h4>Tecnologias</h4>
           <app-tec class="row justify-content-center" />
         </div>
