--- a/portfolio/src/app/components/info-tab/info-tab.component.scss
+++ b/portfolio/src/app/components/info-tab/info-tab.component.scss
@@ -2,15 +2,9 @@
   min-height: 130vh;
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
   flex-direction: column;
+  margin-top: 10%;
 }
-
-// .nav-pills {
-//   background-color: #FFFBF5;
-//   justify-content: center;
-//   width: 100%;
-// }
 
 .nav {
   border-bottom: 1px solid #6f5a7e6c;
