--- a/portfolio/src/app/components/main-profile/main-profile.component.html
+++ b/portfolio/src/app/components/main-profile/main-profile.component.html
@@ -1,94 +1,90 @@
-<div class="containerProfile">
-  <div class="pictureProfileInfo">
-    <div class="row d-flex align-items-center flex-column sticky">
-      <div class="containerPictureProfile">
+
+<div class="container">
+  <div class="row p-3">
+    <div class="d-flex justify-content-center">
+      <img
+        src="../../../assets/7ppvb8uyrjj61.jpg"
+        alt="imagemPerfil"
+        class="profilePicture"
+      />
+    </div>
+    <h2 class="text-center mt-3">Mateus Suzuki</h2>
+    <div class="d-flex justify-content-center">
+      <p class="backgroundPurple">Desenvolvedor FullStack</p>
+    </div>
+    <div>
+      <p class="fw-semibold my-1 ps-0">Redes Sociais:</p>
+      <button class="backgroundPurple d-flex col-auto my-2">
         <img
-          src="../../../assets/7ppvb8uyrjj61.jpg"
-          alt="profile image"
-          class="pictureProfile"
+          src="../../../assets/svgs/ig.svg"
+          alt=""
+          class="iconContact ms-1"
         />
-      </div>
-      <h2 class="fw-semibold col-12 text-center mt-2">Mateus Suzuki</h2>
-      <p class="backgroundGray fw-semibold col-9 text-center">
-        Desenvolvedor FullStack
-      </p>
-      <div class="col-12">
-        <div class="row justify-content-center">
-          <button class="btn col-2 backgroundGray mx-1">
-            <img
-              src="../../../assets/svgs/ig.svg"
-              class="socialIcon"
-              alt="social media"
-            />
-          </button>
-          <button class="btn col-2 backgroundGray mx-1">
-            <img
-              src="../../../assets/svgs/git.svg"
-              class="socialIcon"
-              alt="social media"
-            />
-          </button>
-          <button class="btn col-2 backgroundGray mx-1">
-            <img
-              src="../../../assets/svgs/linkedin.svg"
-              class="socialIcon"
-              alt="social media"
-            />
-          </button>
-        </div>
-      </div>
+        <p class="m-0 mx-3">Instagram</p>
+      </button>
+      <button class="backgroundPurple d-flex col-auto my-2">
+        <img
+          src="../../../assets/svgs/git.svg"
+          alt=""
+          class="iconContact ms-1"
+        />
+        <p class="m-0 mx-3">Github</p>
+      </button>
+      <button class="backgroundPurple d-flex col-auto my-2">
+        <img
+          src="../../../assets/svgs/linkedin.svg"
+          alt=""
+          class="iconContact ms-1"
+        />
+        <p class="m-0 mx-3">Linkedin</p>
+      </button>
+    </div>
 
-      <div class="backgroundGray mt-3" style="width: 300px">
-        <div class="p-2 px-3">
-          <div class="row">
-            <div class="col-12">
-              <label class="form-label d-flex align-items-center">
-                <img
-                  src="../../../assets/svgs/smartphone.svg"
-                  alt=""
-                  class="iconContact"
-                />
-                Telefone
-              </label>
-            </div>
-            <span class="col-12 fw-semibold">+55 17 988263169</span>
-          </div>
-
-          <div class="row line">
-            <div class="col-12">
-              <label class="form-label d-flex align-items-center">
-                <img
-                  src="../../../assets/svgs/email.svg"
-                  alt=""
-                  class="iconContact"
-                />
-                Email
-              </label>
-            </div>
-            <span class="col-12 fw-semibold"
-              >mateussuzuki2022&#64;hotmail.com</span
-            >
-          </div>
-
-          <div class="row line">
-            <div class="col-12">
-              <label class="form-label d-flex align-items-center">
-                <img
-                  src="../../../assets/svgs/localizacao.svg"
-                  alt=""
-                  class="iconContact"
-                />
-                Localização
-              </label>
-            </div>
-            <span class="col-12 fw-semibold">São José do Rio Preto - SP </span>
-          </div>
-        </div>
+    <div>
+      <p class="fw-semibold my-1 ps-0">Contato:</p>
+      <div class="backgroundPurple d-flex col-8 my-2">
+        <img
+          src="../../../assets/svgs/smartphone.svg"
+          alt=""
+          class="iconContact mx-1"
+        />
+        <p class="m-0 mx-1">+55 17 988263169</p>
+        <button class="btn p-0 ms-2">
+          <img src="../../../assets/svgs/copy.svg" alt="" class="iconContact" />
+        </button>
       </div>
-      <button class="btn btnCV my-3 fw-semibold">
-        <span>
-          <img src="../../../assets/svgs/download.svg" alt="" class="iconCV" />
-        </span>
+      <div class="backgroundPurple d-flex col-12 my-2">
+        <img
+          src="../../../assets/svgs/email.svg"
+          alt=""
+          class="iconContact mx-1"
+        />
+        <p class="m-0 mx-1">mateussuzuki2022&#64;hotmail.com</p>
+        <button class="btn p-0">
+          <img src="../../../assets/svgs/copy.svg" alt="" class="iconContact" />
+        </button>
+      </div>
+      <div class="backgroundPurple d-flex col-10 my-2">
+        <img
+          src="../../../assets/svgs/localizacao.svg"
+          alt=""
+          class="iconContact mx-1"
+        />
+        <p class="m-0 mx-1">São José do Rio Preto - SP</p>
+        <button class="btn p-0 ms-1">
+          <img src="../../../assets/svgs/copy.svg" alt="" class="iconContact" />
+        </button>
+      </div>
+    </div>
+
+
+    <div class="d-flex justify-content-center mt-5 mb-3">
+      <button class="col-8 backgroundPurple p-2">
+        <img
+          src="../../../assets/svgs/download.svg"
+          alt=""
+          class="iconContact me-2"
+        />
         Download Cv
       </button>
     </div>
