adicionando função do botão para copiar informação

--- a/portfolio/src/app/components/info-tab/info-tab.component.html
+++ b/portfolio/src/app/components/info-tab/info-tab.component.html
@@ -1,21 +1,25 @@
 <div class="container d-flex justify-content-center">
   <div class="containerInfo">
     <div class="tabContent">
-      <div class="nav col-12 justify-content-center" id="v-pills-tab" role="tablist">
-        <button
-        class="nav-link col-3 mx-5 py-3"
-        id="homeTab"
-        data-bs-toggle="pill"
-        data-bs-target="#about"
-        type="button"
-        role="tab"
-        aria-controls="v-pills-home"
-        aria-selected="true"
-        >
-        <span class="black fs-4">Sobre</span>
-      </button>
+      <div
+        class="nav col-12 justify-content-center"
+        id="v-pills-tab"
+        role="tablist"
+      >
         <button
           class="nav-link active col-3 mx-5 py-3"
+          id="homeTab"
+          data-bs-toggle="pill"
+          data-bs-target="#about"
+          type="button"
+          role="tab"
+          aria-controls="v-pills-home"
+          aria-selected="true"
+        >
+          <span class="black fs-4">Sobre</span>
+        </button>
+        <button
+          class="nav-link col-3 mx-5 py-3"
           id="projectTab"
           data-bs-toggle="pill"
           data-bs-target="#project"
@@ -29,14 +33,13 @@
       </div>
       <div class="tab-content" id="v-pills-tabContent">
         <div
-          class="tab-pane fade"
+          class="tab-pane fade show active"
           id="about"
           role="tabpanel"
           aria-labelledby="homeTab"
           tabindex="0"
         >
-          <!-- <h1>Sobre</h1> -->
-          <!-- <hr /> -->
+
           <p>
             Olá, me chamo Mateus Suzuki e estudo programação a um ano e meio, já
             realizei alguns projetos pequenos, mas recentemente estou aplicando
@@ -47,16 +50,12 @@
           <app-tec class="row justify-content-center" />
         </div>
         <div
-          class="tab-pane fade show active"
+          class="tab-pane fade"
           id="project"
           role="tabpanel"
           aria-labelledby="projectTab"
           tabindex="0"
         >
-          <div class="line">
-            <!-- <h1>Projetos</h1> -->
-            <!-- <hr /> -->
-          </div>
           <app-projects class="row justify-content-center" />
         </div>
       </div>
