--- a/portfolio/src/app/components/main-profile/main-profile.component.html
+++ b/portfolio/src/app/components/main-profile/main-profile.component.html
@@ -1,4 +1,3 @@
-
 <div class="container">
   <div class="row p-3">
     <div class="d-flex justify-content-center">
@@ -48,8 +47,8 @@
           alt=""
           class="iconContact mx-1"
         />
-        <p class="m-0 mx-1">+55 17 988263169</p>
-        <button class="btn p-0 ms-2">
+        <p id="number" class="m-0 mx-1">+55 17 988263169</p>
+        <button class="btn p-0 ms-2" (click)="copyText('number')">
           <img src="../../../assets/svgs/copy.svg" alt="" class="iconContact" />
         </button>
       </div>
@@ -59,8 +58,8 @@
           alt=""
           class="iconContact mx-1"
         />
-        <p class="m-0 mx-1">mateussuzuki2022&#64;hotmail.com</p>
-        <button class="btn p-0">
+        <p id="email" class="m-0 mx-1">mateussuzuki2022&#64;hotmail.com</p>
+        <button class="btn p-0" (click)="copyText('email')">
           <img src="../../../assets/svgs/copy.svg" alt="" class="iconContact" />
         </button>
       </div>
@@ -70,13 +69,12 @@
           alt=""
           class="iconContact mx-1"
         />
-        <p class="m-0 mx-1">São José do Rio Preto - SP</p>
-        <button class="btn p-0 ms-1">
+        <p id="location" class="m-0 mx-1">São José do Rio Preto - SP</p>
+        <button class="btn p-0 ms-1" (click)="copyText('location')">
           <img src="../../../assets/svgs/copy.svg" alt="" class="iconContact" />
         </button>
       </div>
     </div>
-
 
     <div class="d-flex justify-content-center mt-5 mb-3">
       <button class="col-8 backgroundPurple p-2">
