animação de copy ao clicar em algum contato

--- a/portfolio/src/app/components/main-profile/main-profile.component.html
+++ b/portfolio/src/app/components/main-profile/main-profile.component.html
@@ -51,6 +51,7 @@
         <button class="btn p-0 ms-2" (click)="copyText('number')">
           <img src="../../../assets/svgs/copy.svg" alt="" class="iconContact" />
         </button>
+        <div class="mensagem-copy" id="number-copy">copy</div>
       </div>
       <div class="backgroundPurple d-flex col-12 my-2">
         <img
@@ -62,6 +63,7 @@
         <button class="btn p-0" (click)="copyText('email')">
           <img src="../../../assets/svgs/copy.svg" alt="" class="iconContact" />
         </button>
+        <div class="mensagem-copy" id="email-copy">copy</div>
       </div>
       <div class="backgroundPurple d-flex col-10 my-2">
         <img
@@ -73,6 +75,7 @@
         <button class="btn p-0 ms-1" (click)="copyText('location')">
           <img src="../../../assets/svgs/copy.svg" alt="" class="iconContact" />
         </button>
+        <div class="mensagem-copy" id="location-copy">copy</div>
       </div>
     </div>
 
