alterando url das imagens para deploy

--- a/portfolio/src/app/components/info-tab/info-tab.component.html
+++ b/portfolio/src/app/components/info-tab/info-tab.component.html
@@ -8,9 +8,11 @@
       >
         <button
           class="nav-link active col-3 mx-5 py-3"
+          id="homeTab"
           data-bs-toggle="pill"
           data-bs-target="#about"
           type="button"
+          role="tab"
           aria-controls="v-pills-home"
           aria-selected="true"
         >
@@ -18,9 +20,11 @@
         </button>
         <button
           class="nav-link col-3 mx-5 py-3"
+          id="projectTab"
           data-bs-toggle="pill"
           data-bs-target="#project"
           type="button"
+          role="tab"
           aria-controls="v-pills-profile"
           aria-selected="false"
         >
@@ -35,6 +39,7 @@
           aria-labelledby="homeTab"
           tabindex="0"
         >
+
           <p>
             Olá, me chamo Mateus Suzuki e estudo programação a um ano e meio, já
             realizei alguns projetos pequenos, mas recentemente estou aplicando
