--- a/portfolio/src/app/components/main-profile/main-profile.component.html
+++ b/portfolio/src/app/components/main-profile/main-profile.component.html
@@ -2,7 +2,7 @@
   <div class="row p-3">
     <div class="d-flex justify-content-center">
       <img
-        src="./assets/7ppvb8uyrjj61.jpg"
+        src="../../../assets/7ppvb8uyrjj61.jpg"
         alt="imagemPerfil"
         class="profilePicture"
       />
@@ -11,6 +11,7 @@
     <div class="d-flex justify-content-center">
       <p class="backgroundPurple p-1 px-3">Desenvolvedor FullStack</p>
     </div>
+
     <div>
       <p class="fw-semibold my-1 ps-0">Redes Sociais:</p>
       <a
@@ -19,12 +20,12 @@
         class="backgroundPurple d-flex col-6 my-2 text-decoration-none"
       >
         <img
-          src="./assets/svgs/ig.svg"
+          src="../../../assets/svgs/ig.svg"
           alt=""
-          class="iconContact ms-1"
+          class="iconContact"
         />
         <p class="m-0 mx-3 me-2">Instagram</p>
-        <img src="./assets/svgs/arrow.svg" alt="" class="iconContact">
+        <img src="../../../assets/svgs/arrow.svg" alt="" class="iconContact">
       </a>
       <a
         href="https://github.com/mateussuzuki"
@@ -32,12 +33,12 @@
         class="backgroundPurple d-flex col-5 my-2 text-decoration-none"
       >
         <img
-          src="./assets/svgs/git.svg"
+          src="../../../assets/svgs/git.svg"
           alt=""
           class="iconContact ms-1"
         />
         <p class="m-0 mx-3 me-2">Github</p>
-        <img src="./assets/svgs/arrow.svg" alt="" class="iconContact">
+        <img src="../../../assets/svgs/arrow.svg" alt="" class="iconContact">
       </a>
       <a
         href="https://www.linkedin.com/in/mateus-suzuki-a80b91205/"
@@ -45,62 +46,121 @@
         class="backgroundPurple d-flex col-6 my-2 text-decoration-none"
       >
         <img
-          src="./assets/svgs/linkedin.svg"
+          src="../../../assets/svgs/linkedin.svg"
           alt=""
           class="iconContact ms-1"
         />
-        <p class="m-0 mx-3 me-2">Linkedin</p>
-        <img src="./assets/svgs/arrow.svg" alt="" class="iconContact">
+        <p class="m-0 mx-3">Linkedin</p>
+        <img src="../../../assets/svgs/arrow.svg" alt="" class="iconContact">
       </a>
+      <div class="row m-0">
+        <a
+          href="https://www.instagram.com/math.suza/"
+          target="_blank"
+          class="backgroundPurple d-flex col-auto my-1 text-decoration-none"
+        >
+          <img src="./assets/svgs/ig.svg" alt="" class="iconContact ms-1" />
+          <p class="m-0 mx-2 me-1">Instagram</p>
+          <img src="./assets/svgs/arrow.svg" alt="" class="iconContact" />
+        </a>
+      </div>
+      <div class="row m-0">
+        <a
+          href="https://github.com/mateussuzuki"
+          target="_blank"
+          class="backgroundPurple d-flex col-auto my-1 text-decoration-none"
+        >
+          <img src="./assets/svgs/git.svg" alt="" class="iconContact ms-1" />
+          <p class="m-0 mx-2 me-1">Github</p>
+          <img src="./assets/svgs/arrow.svg" alt="" class="iconContact" />
+        </a>
+      </div>
+      <div class="row m-0">
+        <a
+          href="https://www.linkedin.com/in/mateus-suzuki-a80b91205/"
+          target="_blank"
+          class="backgroundPurple d-flex col-auto my-1 text-decoration-none"
+        >
+          <img src="./assets/svgs/linkedin.svg" alt="" class="iconContact ms-1" />
+          <p class="m-0 mx-2 me-1">Linkedin</p>
+          <img src="./assets/svgs/arrow.svg" alt="" class="iconContact" />
+        </a>
+      </div>
     </div>
 
     <div>
       <p class="fw-semibold my-1 ps-0">Contato:</p>
       <div class="backgroundPurple d-flex col-8 my-2">
         <img
-          src="./assets/svgs/smartphone.svg"
+          src="../../../assets/svgs/smartphone.svg"
           alt=""
           class="iconContact mx-1"
         />
-        <p id="number" class="m-0 mx-2 me-2">+55 17 988263169</p>
+        <p id="number" class="m-0 mx-1">+55 17 988263169</p>
         <button class="btn p-0 ms-2" (click)="copyText('number')">
-          <img src="./assets/svgs/copy.svg" alt="" class="iconContact" />
+          <img src="../../../assets/svgs/copy.svg" alt="" class="iconContact" />
         </button>
         <div class="mensagem-copy" id="number-copy">copy</div>
       </div>
       <div class="backgroundPurple d-flex col-12 my-2">
         <img
-          src="./assets/svgs/email.svg"
+          src="../../../assets/svgs/email.svg"
           alt=""
           class="iconContact mx-1"
         />
-        <p id="email" class="m-0 mx-2 me-1">mateussuzuki2022&#64;hotmail.com</p>
-        <button class="btn p-0 ms-1" (click)="copyText('email')">
-          <img src="./assets/svgs/copy.svg" alt="" class="iconContact" />
+        <p id="email" class="m-0 mx-1">mateussuzuki2022&#64;hotmail.com</p>
+        <button class="btn p-0" (click)="copyText('email')">
+          <img src="../../../assets/svgs/copy.svg" alt="" class="iconContact" />
         </button>
         <div class="mensagem-copy" id="email-copy">copy</div>
       </div>
-      <div class="backgroundPurple d-flex col-10 my-2">
-        <img
-          src="./assets/svgs/localizacao.svg"
-          alt=""
-          class="iconContact mx-1"
-        />
-        <p id="location" class="m-0 mx-2 me-2">São José do Rio Preto - SP</p>
-        <button class="btn p-0 ms-2" (click)="copyText('location')">
-          <img src="./assets/svgs/copy.svg" alt="" class="iconContact" />
-        </button>
-        <div class="mensagem-copy" id="location-copy">copy</div>
+      
+      <div class="row m-0">
+        <div class="backgroundPurple d-flex col-auto my-2" id="contact">
+          <img
+            src="./assets/svgs/smartphone.svg"
+            alt=""
+            class="iconContact mx-1"
+          />
+          <p id="number" class="m-0 mx-1 pt-1">+55 17 988263169</p>
+          <button class="btn p-0 mx-1" (click)="copyText('number')">
+            <img src="./assets/svgs/copy.svg" alt="" class="iconContact" />
+          </button>
+          <div class="mensagem-copy" id="number-copy">copy</div>
+        </div>
       </div>
+
+      <div class="row m-0">
+        <div class="backgroundPurple d-flex col-auto" id="contact">
+          <img src="./assets/svgs/email.svg" alt="" class="iconContact mx-1" />
+          <p id="email" class="m-0 mx-1 pt-1">mateussuzuki2022&#64;hotmail.com</p>
+          <button class="btn p-0 mx-1" (click)="copyText('email')">
+            <img src="./assets/svgs/copy.svg" alt="" class="iconContact" />
+          </button>
+          <div class="mensagem-copy" id="email-copy">copy</div>
+        </div>
+      </div>
+
+      <div class="row m-0">
+        <div class="backgroundPurple d-flex col-auto my-2" id="contact">
+          <img
+            src="./assets/svgs/localizacao.svg"
+            alt=""
+            class="iconContact mx-1"
+          />
+          <p id="location" class="m-0 mx-1 pt-1">São José do Rio Preto - SP</p>
+          <button class="btn p-0 mx-1" (click)="copyText('location')">
+            <img src="./assets/svgs/copy.svg" alt="" class="iconContact" />
+          </button>
+          <div class="mensagem-copy" id="location-copy">copy</div>
+        </div>
+      </div>
+
     </div>
 
     <div class="d-flex justify-content-center mt-5 mb-3">
       <button class="col-8 backgroundPurple p-2" (click)="downloadPDF()">
-        <img
-          src="./assets/svgs/download.svg"
-          alt=""
-          class="iconContact me-2"
-        />
+        <img src="./assets/svgs/download.svg" alt="" class="iconContact me-2" />
         Download Cv
       </button>
     </div>
